--- a/app/index.html
+++ b/app/index.html
@@ -53,7 +53,7 @@
 
 	<script type="text/javascript">
 		System
-			.import('app/app')
+			.import('app')
 			.catch(console.error.bind(console)); // make sure any errors print to console
 	</script>
 </body>
