--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,7 @@
 	<div layout="column" flex tabIndex="-1" role="main" ui-view></div>
 
 	<script type="text/javascript" src="jspm_packages/system.js"></script>
-	<script type="text/javascript" src="system.config.js"></script>
+	<script type="text/javascript" src="jspm.config.js"></script>
 
 	<!-- PROD
 	<script type="text/javascript">
