--- a/app/index.html
+++ b/app/index.html
@@ -2,15 +2,17 @@
 <html lang="en" data-framework="angularjs">
 <head>
 	<meta charset="utf-8" />
+
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 	<meta name="apple-mobile-web-app-status-bar-style" content="black" />
 	<meta name="viewport" content="width = device-width, minimal-ui, initial-scale = 1, user-scalable = no" />
 	<meta name="apple-mobile-web-app-title" content="SystemJS Material-Start" />
-	<title>SystemJS Material-Start</title>
+	<title>Angular 1.x, JSPM,  Material Start Kit</title>
 	<base href="/" />
 	<link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:400,700'>
 
+  <link rel="stylesheet" href="app.css" />
 	<style type="text/css">
 		/**
 		 * Hide when Angular is not yet loaded and initialized
@@ -30,7 +32,8 @@
 		</div>
 	</noscript>
 
-	<div layout="column" flex tabIndex="-1" role="main" ui-view></div>
+	<!--<div layout="column" flex tabIndex="-1" role="main" ui-view></div>-->
+  <app>loading ...</app>
 
 	<script type="text/javascript" src="jspm_packages/system.js"></script>
 	<script type="text/javascript" src="jspm.config.js"></script>
@@ -52,9 +55,7 @@
 	END -->
 
 	<script type="text/javascript">
-		System
-			.import('app')
-			.catch(console.error.bind(console)); // make sure any errors print to console
+    System.import('app').catch(console.error.bind(console));
 	</script>
 </body>
 </html>
