--- a/src/index.html
+++ b/src/index.html
@@ -9,34 +9,27 @@
 	<meta name="viewport" content="width = device-width, minimal-ui, initial-scale = 1, user-scalable = no" />
 	<meta name="apple-mobile-web-app-title" content="SystemJS Material-Start" />
 	<title>Angular 1.x, JSPM,  Material Start Kit</title>
-	<base href="/" />
+  <base href="/">
 	<link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:400,700'>
 
   <link rel="stylesheet" href="app.css" />
-	<style type="text/css">
-		/**
-		 * Hide when Angular is not yet loaded and initialized
-		 */
-		[ng-cloak] {
-			display: none;
-		}
-	</style>
 </head>
 <body ng-cloak layout="column">
 
-	<noscript>
-		<div class="deprecation-warning">
-			<h1>Please enable Javascript</h1>
-			<p>Demo requires your browser to have Javascript enabled.
-			<a href="http://enable-javascript.com" target="_blank">Learn more</a></p>
-		</div>
-	</noscript>
+  <!--[if lt IE 10]>
+  <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
+    your browser</a> to improve your experience.</p>
+  <![endif]-->
 
 	<!--<div layout="column" flex tabIndex="-1" role="main" ui-view></div>-->
   <app>loading ...</app>
 
 	<script type="text/javascript" src="jspm_packages/system.js"></script>
 	<script type="text/javascript" src="jspm.config.js"></script>
+
+  <script type="text/javascript">
+    System.import('app').catch(console.error.bind(console));
+  </script>
 
 	<!-- PROD
 	<script type="text/javascript">
@@ -53,9 +46,5 @@
 		System.cacheBust = '?bust={{hash}}';
 	</script>
 	END -->
-
-	<script type="text/javascript">
-    System.import('app').catch(console.error.bind(console));
-	</script>
 </body>
 </html>
