--- a/src/index.html
+++ b/src/index.html
@@ -2,16 +2,14 @@
 <html lang="en" data-framework="angularjs">
 <head>
 	<meta charset="utf-8" />
+  <title>NG Starter Kit</title>
+  <meta name="description" content="AngularJS • JSPM • TypeScript • Material • Gulp">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
 
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-	<meta name="apple-mobile-web-app-capable" content="yes" />
-	<meta name="apple-mobile-web-app-status-bar-style" content="black" />
-	<meta name="viewport" content="width = device-width, minimal-ui, initial-scale = 1, user-scalable = no" />
-	<meta name="apple-mobile-web-app-title" content="SystemJS Material-Start" />
-	<title>Angular 1.x, JSPM,  Material Start Kit</title>
   <base href="/">
-	<link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:400,700'>
 
+	<link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:400,700'>
   <link rel="stylesheet" href="app.css" />
 </head>
 <body ng-cloak layout="column">
@@ -21,7 +19,6 @@
     your browser</a> to improve your experience.</p>
   <![endif]-->
 
-	<!--<div layout="column" flex tabIndex="-1" role="main" ui-view></div>-->
   <app>loading ...</app>
 
 	<script type="text/javascript" src="jspm_packages/system.js"></script>
